# local-scribe

./: .gitignore  LICENSE  README.md  pyproject.toml
local_scribe/: __init__.py  transcribe.py
shim/: transcribe.py
